# curly

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/curly/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cacerts.pem
app/src/main/cpp/: CMakeLists.txt  CurlWrapper.h  native-lib.cpp
app/src/main/java/com/example/curly/: MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/curly/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
